portfolio/styles.css
.headshot {
  width: 205px;
  height: 307px;
}
.logo {
  width: 74px;
  height: 111px;
  display: flex;
  justify-content: flex-start;
}
*{
  font-family: Poppins;
  background-color: #4A4A4A;
  color: white;
  font-size: 16px;
}
h1 {
  font-size: 32px;
  font-weight: 900;
}
h2 {
  font-size: 24px;
}
#uxProject{
  margin: -55px;
}
strong {
    font-size: 24px;
}
nav {
  display: flex;
  justify-content: space-between;
  font-size: 16px;
  align-items: center;
  padding: 10px;
}

nav ul {
  display: flex;
  list-style-type: none;
  flex-direction: row;
}
nav a {
  font-size: 16px;
  color: #53D07D;
  text-decoration: none;
}
a {
    color: #53D07D;
}
nav li {
  padding: 10px;
}
.flex-container {
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
}

.flex-item {
  display: flex;
  align-items: center;
  justify-content: center;
}
header {
  display: flex;
  justify-content: center;
  align-items: center;
}
.projects {
    height: auto;
    float: right;
}
span {
    font-size: 12px;
}
.resume {
    list-style: none;
    position: relative;
    padding-left: 20px;
    margin: 0;
}

.resume::before {
    content: '';
    position: absolute;
    top: 0;
    left: 12px;
    width: 2px;
    height: 100%;
    background-color: #53D07D;
}

.resume li {
    position: relative;
    margin: 20px 0;
    padding-left: 10px;
}
.resume li ul li {
    list-style-type: disc;
    padding-left: 20px;
    position: static;
}
.resume li::before {
    content: '';
    position: absolute;
    left: -12px;
    top: 0;
    width: 10px;
    height: 10px;
    background-color: #53D07D;
    border-radius: 50%;
}
.container {
  display: flex;
  justify-content: space-evenly;
  gap: 20px;
}

.container>div {
  flex: 1;
}
@media (max-width: 768px) {
  body {
    font-size: 14px;
  }

  header {
    flex-direction: column;
    text-align: center;
  }

  nav ul {
    flex-direction: column;
    align-items: center;
  }

  .container {
    flex-direction: column;
    gap: 10px;
  }

  .container>div {
    flex: none;
    width: 100%;
  }

  .logo {
    width: 50px;
    height: auto;
  }

  a {
    font-size: 14px;
  }
}

